# comfyui-doctor

./: .gitignore  LICENSE  README.md  pyproject.toml
comfyui_doctor/: __init__.py  cli.py
comfyui_doctor/core/: api.py  auth.py  builder.py  doctor.py  llm.py  mcp_client.py  optimizer.py  workflow.py
comfyui_doctor/knowledge/: error_db.py  manager_db.py  model_map.py  node_map.py  node_replacements.py
research/: NOTES.md  vps_test_log.md  workflow_test_sdxl.json
tests/: test_auth.py  test_core.py  test_llm.py  test_mcp.py  test_workflow.json
