[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "comfyui-doctor"
version = "0.1.0"
description = "Make any ComfyUI workflow work in one shot. Auto-fix missing nodes, dependencies, and models."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bebop Studio", email = "contact@bebop.studio"}
]
keywords = ["comfyui", "ai", "workflow", "debug", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
comfyui-doctor = "comfyui_doctor.cli:app"

[project.urls]
Homepage = "https://github.com/wuraaang/comfyui-doctor"
Repository = "https://github.com/wuraaang/comfyui-doctor"
Issues = "https://github.com/wuraaang/comfyui-doctor/issues"

[tool.setuptools.packages.find]
include = ["comfyui_doctor*"]
